--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -110,7 +110,7 @@ set_real_ip_from 109.71.252.88;
 set_real_ip_from 109.71.252.97;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.35.245.150;
-set_real_ip_from 114.41.27.11;
+set_real_ip_from 114.41.12.192;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
@@ -143,6 +143,7 @@ set_real_ip_from 144.172.118.41;
 set_real_ip_from 144.172.118.73;
 set_real_ip_from 146.59.126.232;
 set_real_ip_from 146.59.231.4;
+set_real_ip_from 146.70.164.214;
 set_real_ip_from 147.45.116.145;
 set_real_ip_from 148.113.152.91;
 set_real_ip_from 149.102.153.38;
@@ -954,7 +955,6 @@ set_real_ip_from 216.239.90.19;
 set_real_ip_from 216.73.159.101;
 set_real_ip_from 216.73.159.75;
 set_real_ip_from 217.12.221.131;
-set_real_ip_from 217.154.21.121;
 set_real_ip_from 217.199.199.250;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.248.192;
@@ -965,6 +965,7 @@ set_real_ip_from 23.137.254.137;
 set_real_ip_from 23.151.8.8;
 set_real_ip_from 23.153.248.33;
 set_real_ip_from 23.153.248.34;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.78;
 set_real_ip_from 23.191.200.10;
 set_real_ip_from 23.191.200.11;
@@ -1030,6 +1031,7 @@ set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2600:3c0b::f03c:95ff:fefa:bdff;
 set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:fa8a:3:a::a;
 set_real_ip_from 2602:fc24:10:61b::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
@@ -1251,7 +1253,6 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e01::f03c:95ff:fe52:c6f8;
 set_real_ip_from 2a02:16d0:0:5::1;
-set_real_ip_from 2a02:2479:0:6e00::1;
 set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
@@ -1586,6 +1587,7 @@ set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:44;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:64;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:92;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b00b:1337:1;
+set_real_ip_from 2a0e:97c0:3e3:460:1337:b03b:1337:4;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b04b:1337:5;
 set_real_ip_from 2a0e:97c0:3e3:a0e::1;
 set_real_ip_from 2a0e:97c0:470::30;
@@ -1941,6 +1943,7 @@ set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.19.182.20;
+set_real_ip_from 84.211.226.13;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 85.239.41.130;
 set_real_ip_from 85.93.218.204;
